--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.7.9",
     "lucide-react": "^0.542.0",
     "next": "15.1.3",
